update user pick controller