@@ -1,56 +1,54 @@
 package com.adamnestor.courtvision.web;
 
 import com.adamnestor.courtvision.domain.Users;
-import com.adamnestor.courtvision.domain.UserPicks;
 import com.adamnestor.courtvision.dto.common.ServiceResponse;
-import com.adamnestor.courtvision.dto.picks.CreatePickRequest;
-import com.adamnestor.courtvision.dto.picks.UserPickDTO;
-import com.adamnestor.courtvision.repository.UsersRepository;
+import com.adamnestor.courtvision.dto.picks.*;
 import com.adamnestor.courtvision.service.UserPickService;
-import jakarta.persistence.EntityNotFoundException;
+import jakarta.validation.Valid;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
-import org.springframework.security.core.annotation.AuthenticationPrincipal;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 @RestController
 @RequestMapping("/api/picks")
 public class UserPickController {
     private static final Logger logger = LoggerFactory.getLogger(UserPickController.class);
-
     private final UserPickService pickService;
-    private final UsersRepository usersRepository;
 
-    public UserPickController(UserPickService pickService, UsersRepository usersRepository) {
+    public UserPickController(UserPickService pickService) {
         this.pickService = pickService;
-        this.usersRepository = usersRepository;
+    }
+
+    @GetMapping
+    public ResponseEntity<ServiceResponse<Map<String, Object>>> getUserPicks(Authentication auth) {
+        try {
+            Users user = (Users) auth.getPrincipal();
+            Map<String, Object> response = new HashMap<>();
+            response.put("singles", pickService.getUserPicks(user));
+            response.put("parlays", pickService.getUserParlays(user));
+            return ResponseEntity.ok(ServiceResponse.success(response));
+        } catch (Exception e) {
+            logger.error("Error fetching picks", e);
+            return ResponseEntity.badRequest()
+                    .body(ServiceResponse.error("Failed to load picks"));
+        }
     }
 
     @PostMapping
     public ResponseEntity<ServiceResponse<UserPickDTO>> createPick(
-            @RequestBody CreatePickRequest request,
-            Authentication authentication) {
+            @Valid @RequestBody CreatePickRequest request,
+            Authentication auth) {
         try {
-            logger.debug("Received pick request: {}", request);
-
-            if (authentication == null) {
-                logger.error("No authentication found");
-                return ResponseEntity.badRequest()
-                        .body(ServiceResponse.error("User not authenticated"));
-            }
-
-            String email = authentication.getName();
-            Users user = usersRepository.findByEmail(email)
-                    .orElseThrow(() -> new EntityNotFoundException("User not found"));
-
-            UserPicks pick = pickService.createPick(user, request);
-            return ResponseEntity.ok(ServiceResponse.success(mapToDTO(pick)));
+            Users user = (Users) auth.getPrincipal();
+            return ResponseEntity.ok(ServiceResponse.success(
+                    pickService.mapToDTO(pickService.createPick(user, request))
+            ));
         } catch (Exception e) {
             logger.error("Error creating pick", e);
             return ResponseEntity.badRequest()
@@ -60,24 +58,14 @@ public class UserPickController {
 
     @PostMapping("/parlay")
     public ResponseEntity<ServiceResponse<List<UserPickDTO>>> createParlay(
-            @RequestBody List<CreatePickRequest> requests,
-            Authentication authentication) {
+            @Valid @RequestBody List<CreatePickRequest> requests,
+            Authentication auth) {
         try {
-            logger.debug("Received parlay request with {} picks", requests.size());
-
-            if (authentication == null) {
-                logger.error("No authentication found");
-                return ResponseEntity.badRequest()
-                        .body(ServiceResponse.error("User not authenticated"));
-            }
-
-            String email = authentication.getName();
-            Users user = usersRepository.findByEmail(email)
-                    .orElseThrow(() -> new EntityNotFoundException("User not found"));
-
-            List<UserPicks> picks = pickService.createParlay(user, requests);
+            Users user = (Users) auth.getPrincipal();
             return ResponseEntity.ok(ServiceResponse.success(
-                    picks.stream().map(this::mapToDTO).collect(Collectors.toList())
+                    pickService.createParlay(user, requests).stream()
+                            .map(pickService::mapToDTO)
+                            .toList()
             ));
         } catch (Exception e) {
             logger.error("Error creating parlay", e);
@@ -86,29 +74,12 @@ public class UserPickController {
         }
     }
 
-    @GetMapping("/today")
-    public ResponseEntity<ServiceResponse<List<UserPickDTO>>> getTodaysPicks(
-            @AuthenticationPrincipal Users user) {
-        try {
-            logger.debug("Fetching today's picks for user: {}", user.getEmail());
-            List<UserPickDTO> picks = pickService.getTodaysPicks(user)
-                    .stream()
-                    .map(this::mapToDTO)
-                    .collect(Collectors.toList());
-            return ResponseEntity.ok(ServiceResponse.success(picks));
-        } catch (Exception e) {
-            logger.error("Error fetching picks", e);
-            return ResponseEntity.badRequest()
-                    .body(ServiceResponse.error(e.getMessage()));
-        }
-    }
-
     @DeleteMapping("/{id}")
     public ResponseEntity<ServiceResponse<Void>> deletePick(
             @PathVariable Long id,
-            @AuthenticationPrincipal Users user) {
+            Authentication auth) {
         try {
-            logger.debug("Deleting pick: {} for user: {}", id, user.getEmail());
+            Users user = (Users) auth.getPrincipal();
             pickService.deletePick(id, user);
             return ResponseEntity.ok(ServiceResponse.success(null));
         } catch (Exception e) {
@@ -118,20 +89,18 @@ public class UserPickController {
         }
     }
 
-    private UserPickDTO mapToDTO(UserPicks pick) {
-        return new UserPickDTO(
-                pick.getId(),
-                pick.getPlayer().getId(),
-                pick.getPlayer().getFirstName() + " " + pick.getPlayer().getLastName(),
-                pick.getPlayer().getTeam().getAbbreviation(),
-                pick.getGame().getHomeTeam().equals(pick.getPlayer().getTeam()) ?
-                        pick.getGame().getAwayTeam().getAbbreviation() :
-                        pick.getGame().getHomeTeam().getAbbreviation(),
-                pick.getCategory(),
-                pick.getThreshold(),
-                pick.getHitRateAtPick().doubleValue(),
-                pick.getResult(),
-                pick.getCreatedAt()
-        );
+    @DeleteMapping("/parlay/{parlayId}")
+    public ResponseEntity<ServiceResponse<Void>> deleteParlay(
+            @PathVariable String parlayId,
+            Authentication auth) {
+        try {
+            Users user = (Users) auth.getPrincipal();
+            pickService.deleteParlay(parlayId, user);
+            return ResponseEntity.ok(ServiceResponse.success(null));
+        } catch (Exception e) {
+            logger.error("Error deleting parlay", e);
+            return ResponseEntity.badRequest()
+                    .body(ServiceResponse.error(e.getMessage()));
+        }
     }
 }
